[package]
name = "dp_warehouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dp_warehouse"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module", "hashbrown"] }
hashbrown = "0.12"
serde = {version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"